[tool.poetry]
name = "keypoint-cat"
version = "0.1.0"
description = "Python template repository"
authors = ["dogeplusplus <albertswchung@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.6.0"
torch = "^1.12.1"
albumentations = "^1.2.1"
matplotlib = "^3.5.3"
einops = "^0.4.1"
torchvision = "^0.13.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^22.3.0"
yapf = "^0.32.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
